# wireless-cooler

./: project.properties
lib/Adafruit_BluefruitLE_nRF51-master/src/: Adafruit_ATParser.h  Adafruit_BLE.cpp  Adafruit_BluefruitLE_SPI.cpp  Adafruit_BluefruitLE_UART.h
lib/DS18B20/: library.properties
lib/DS18B20/src/: DS18B20.cpp  DS18B20.h
lib/MCP9808/: MCP9808.cpp  MCP9808.h
lib/MCP9808/examples/: MCP9808_Example.cpp
lib/RFM69-Particle/: spark.json
lib/RFM69-Particle/examples/: hello-photon-rx-rfm69.cpp  (+2 more)
src/: BLE_NVM_Data.cpp  BLE_NVM_Data.h  BLE_Peripheral.cpp  BLE_Peripheral.h  BluefruitConfig.h  CellStateMachine.h  Cell_Implementation.cpp  Cell_Implementation.h  Cell_Peripheral.cpp  Cell_Peripheral.h  ConsoleMenu.cpp  ConsoleMenu.h  DHT_Peripheral.cpp  DHT_Peripheral.h  DS18B20_Peripheral.cpp  DS18B20_Peripheral.h  Electron_Peripheral.cpp  Electron_Peripheral.h  IATCommandInterface.h  IBLEInterface.h  IConsoleOutput.h  IPeripheralDevice.cpp  IPeripheralDevice.h  MCP9808_Peripheral.cpp  MCP9808_Peripheral.h  Parameter.cpp  Parameter.h  ParameterHelpers.cpp  ParameterHelpers.h  ParticleWiring.h  Persistence.cpp  Persistence.h  PwrMgmt_Peripheral.cpp  Pwrmgmt_Peripheral.h  RFM69_Peripheral.cpp  RFM69_Peripheral.h  ScopedBLEModeSetter.h  SerialAndBluetooth.h  ShortTermMemory.h  ShortTermMemoryDataStruct.h  (+17 more)
test_wireless-cooler/: CMakeCache.txt  CMakeLists.txt  How I setup googletest.txt  Makefile  ShortTermMemoryTest.cpp  cmake_install.cmake  msmtest.cpp  serializedemo_simple_test.cpp  serializedemotest.cpp  test_wireless-cooler  test_wireless-cooler.cpp
(+5 files in other folders)
